# gpu-systems-lab

./: .gitignore  CONTRIBUTING.md  PUBLISHING.md  README.md  SECURITY.md  gpu.py  pyproject.toml  roadmap.json  storage.json  train.py
.githooks/: README.md  pre-commit
.github/: CODEOWNERS
.github/workflows/: test.yml
labs/pytorch/: matmul_benchmark.py
labs/vector_add/: vector_add.cu
notes/: hardware.md
reports/: gpu-week1-report.md
tests/: conftest.py  test_ask_llm_feedback.py  test_count_pending_prompts.py  test_default_storage.py  test_expand_bench_path.py  test_format_relative.py  test_give_teaching_feedback.py  test_llm_cache_key.py  test_next_task.py  test_pattern_in.py  test_prompt_bottleneck_followup.py  test_prompt_teaching.py  test_prompt_teaching_surface.py  test_render.py  test_score.py  test_storage_roundtrip.py  test_v0_24_parallel_track.py  test_v0_25_systems_track.py  test_v0_26_cli_polish.py
