[project]
name = "gpu-systems-lab"
version = "0.1.0"
description = "A terminal-based training loop for learning CUDA, GPU profiling, and AI systems engineering."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
gpu = "gpu:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["gpu"]
